Remove space in Tools button text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="tools-btn-wrap">
-    <button onclick="window.location.href='tools.html'">⚡ Tools & Converters</button>
+    <button onclick="window.location.href='tools.html'">⚡Tools</button>
     </div>
 
     <div class="calculator glass">
