Update service worker registration path

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script src="Script.js"></script>
 <script>
 if('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js');
+  navigator.serviceWorker.register('/Calculator.x/sw.js');
 }
 </script>
 </body>
